force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BatchJobId__c</fullName>
    <formula>vlocity_ps__ContractId__r.vlocity_ps__LastDocumentBatchJobId__c</formula>
    <label>Batch Job Id</label>
    <type>Text</type>
</CustomField>