force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__BatchJobStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__BatchJobStatus__c</fullName>
    <formula>vlocity_ps__ContractId__r.vlocity_ps__LastDocumentBatchJobStatus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Job Status</label>
    <type>Text</type>
</CustomField>