force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__ContainsRedlines__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContainsRedlines__c</fullName>
    <description>Indicates whether this contract document version contains redlines</description>
    <formula>If( vlocity_ps__CountOfContainsRedlines__c&gt;0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contains Redlines</label>
    <type>Checkbox</type>
</CustomField>