force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__ContractType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContractType__c</fullName>
    <description>Contract type</description>
    <formula>vlocity_ps__ContractId__r.vlocity_ps__ContractType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>