force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__CountOfContainsRedlines__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CountOfContainsRedlines__c</fullName>
    <description>Total count of sections that contain redlines in the document version</description>
    <label>Count Of Contains Redlines</label>
    <summaryFilterItems>
        <field>vlocity_ps__ContractSection__c.vlocity_ps__ContainsRedlines__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>vlocity_ps__ContractSection__c.vlocity_ps__ContractVersionId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>