force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__CountOfDocuSignDocument__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CountOfDocuSignDocument__c</fullName>
    <description>Count of documents</description>
    <label>Number of DocuSign Document</label>
    <summaryForeignKey>vlocity_ps__ContractEnvelope__c.vlocity_ps__ContractVersionId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>