force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__DocumentLockedReason__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DocumentLockedReason__c</fullName>
    <description>Reason why the document version is locked</description>
    <label>Document Locked Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>