force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__DocumentLockedUserId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DocumentLockedUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User ID of user who locked this version</description>
    <label>Document Locked User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>