force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__DocumentTemplateFormatType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DocumentTemplateFormatType__c</fullName>
    <formula>TEXT(vlocity_ps__DocumentTemplateId__r.vlocity_ps__TemplateContentFormat__c)</formula>
    <label>Document Template Format Type</label>
    <type>Text</type>
</CustomField>