force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__DocumentTemplateId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DocumentTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document Template Identifier</description>
    <label>Document Template</label>
    <referenceTo>vlocity_ps__DocumentTemplate__c</referenceTo>
    <relationshipLabel>Contract Documents</relationshipLabel>
    <relationshipName>Contract_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>