force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__DocumentTemplateName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DocumentTemplateName__c</fullName>
    <description>Document Template Name</description>
    <formula>vlocity_ps__DocumentTemplateId__r.Name</formula>
    <label>Document Template Name</label>
    <type>Text</type>
</CustomField>