force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__DocumentTemplateVersion__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DocumentTemplateVersion__c</fullName>
    <description>Document Template Version</description>
    <formula>vlocity_ps__DocumentTemplateId__r.vlocity_ps__VersionNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Template Version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>