force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__HasDocumentSignaturePending__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__HasDocumentSignaturePending__c</fullName>
    <description>Indicates whether document has any signatures pending</description>
    <formula>If(vlocity_ps__CountOfDocuSignDocument__c !=0, If( vlocity_ps__CountOfPendingDocument__c=0, false, true), false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Document Signature Pending</label>
    <type>Checkbox</type>
</CustomField>