force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__IsDocumentLocked__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsDocumentLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the document is locked</description>
    <label>Is Document Locked</label>
    <type>Checkbox</type>
</CustomField>