force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__IsNewTemplateVersionAvailable__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsNewTemplateVersionAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a newer version of the template than used for generating the document is available</description>
    <label>New Template Version Available</label>
    <type>Checkbox</type>
</CustomField>