force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__IsTemplateBatchable__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsTemplateBatchable__c</fullName>
    <formula>vlocity_ps__DocumentTemplateId__r.vlocity_ps__HasBatchableSections__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Template Batchable</label>
    <type>Checkbox</type>
</CustomField>