force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__MappingType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MappingType__c</fullName>
    <formula>TEXT(vlocity_ps__DocumentTemplateId__r.vlocity_ps__MappingType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Mapping Type</label>
    <type>Text</type>
</CustomField>