force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__SectionCount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__SectionCount__c</fullName>
    <label>Section Count</label>
    <summaryForeignKey>vlocity_ps__ContractSection__c.vlocity_ps__ContractVersionId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>