force-app/main/default/objects/vlocity_ps__ContractVersion__c/fields/vlocity_ps__TokenDRBundleName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__TokenDRBundleName__c</fullName>
    <formula>vlocity_ps__DocumentTemplateId__r.vlocity_ps__TokenDRBundleName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Token DR Bundle Name</label>
    <type>Text</type>
</CustomField>